--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ html{
     display: flex;
     list-style: none;
     gap: 30px;
+    align-items: center;
 }
 
 .nav__items li{
@@ -110,8 +111,6 @@ ul.nav li a.active{
 .btn-primary{
     cursor: pointer;
     padding: 6px 30px;
-    margin-top: 15px;
-    margin-right: 10px;
     border-radius: 5px;
     background-color: #CCEC46;
     color: #3A365E;
@@ -121,8 +120,6 @@ ul.nav li a.active{
 .btn-primary:hover{
     cursor: pointer;
     padding: 6px 30px;
-    margin-top: 15px;
-    margin-right: 10px;
     border-radius: 5px;
     background-color: #667623;
     color: #fff;
