--- a/style.css
+++ b/style.css
@@ -440,3 +440,97 @@ ul.nav li a.active{
     color: #FFF;
 }
 
+/* Footer */
+
+.footer {
+    width: 100%;
+    background-color: #1e1e1e;
+    padding-bottom: 24px;
+    margin-top: 130px;
+    display: grid;
+}
+
+.footer__container {
+    height: 256px;
+    grid-template-rows: max-content 1fr 1fr;
+    justify-items: center;
+    background-color: #1e1e1e;
+}
+
+.logo__OTWPintar {
+    margin-top: 41px;
+    width: 147px;
+    height: 32px;
+    margin-bottom: 27px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.footer__link {
+    width: 100%;
+    height: 46px;
+    background-color: #1e1e1e;
+    justify-content: center;
+    display: flex;
+}
+
+.footer__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #1e1e1e;
+    text-decoration: none;
+    list-style: none;
+    gap: 100px;
+}
+
+.footer__item{
+    background-color: #1e1e1e;
+}
+
+
+.logo{
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+}
+
+
+.footer__copy-link:hover {
+    color: #CCEC46;
+    transition: .4s;
+}
+
+
+.footer__copy {
+    width: 100%;
+    background-color: #1e1e1e;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.footer__copy-link {
+    font-weight: var(--font-thin);
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFF;
+    background-color: #1e1e1e;
+}
+
+.footer__social-icon i {
+    color: #FFF;
+}
+
+.footer__social .button:nth-child(1):hover .icon {
+    background: #E4405F;
+}
+
+.footer__social .button:nth-child(2):hover .icon {
+    background: #1DA1F2;
+}
+
+.footer__social .button:nth-child(3):hover .icon {
+    background: #CD201F;
+}
